--- a/jet/src/libjet/keyboard.qss
+++ b/jet/src/libjet/keyboard.qss
@@ -11,7 +11,8 @@ QPushButton
 {
 
 	background-color: rgba(192, 192, 192, 50%);
-
+	min-height: 25px;
+	min-width: 25px;
 	border:0px solid rgb(128, 128, 128);
 	border-style: outset;
 	border-width: 3px;
