--- a/jet/src/jet.ui
+++ b/jet/src/jet.ui
@@ -296,47 +296,17 @@
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
-           <item row="0" column="2">
-            <widget class="QPushButton" name="home_pb_2">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Home Z</string>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="0">
-            <widget class="QPushButton" name="unhome_pb_0">
+            <widget class="QPushButton" name="home_pb_0">
              <property name="enabled">
               <bool>false</bool>
              </property>
              <property name="text">
-              <string>UnHome X</string>
+              <string>Home X</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QPushButton" name="home_pb_1">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Home Y</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="2">
-            <widget class="QPushButton" name="unhome_pb_2">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>UnHome Z</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
+           <item row="3" column="1">
             <widget class="QPushButton" name="unhome_pb_1">
              <property name="enabled">
               <bool>false</bool>
@@ -346,7 +316,17 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="3">
+           <item row="3" column="0">
+            <widget class="QPushButton" name="unhome_pb_0">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>UnHome X</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="3">
             <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -359,13 +339,56 @@
              </property>
             </spacer>
            </item>
-           <item row="0" column="0">
-            <widget class="QPushButton" name="home_pb_0">
+           <item row="1" column="1">
+            <widget class="QPushButton" name="home_pb_1">
              <property name="enabled">
               <bool>false</bool>
              </property>
              <property name="text">
-              <string>Home X</string>
+              <string>Home Y</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QPushButton" name="unhome_pb_2">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>UnHome Z</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <spacer name="verticalSpacer">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="0" column="0" colspan="3">
+            <widget class="QPushButton" name="home_all_pb">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Home All</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QPushButton" name="home_pb_2">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Home Z</string>
              </property>
             </widget>
            </item>
@@ -378,19 +401,6 @@
               <string>UnHome All</string>
              </property>
             </widget>
-           </item>
-           <item row="3" column="0">
-            <spacer name="verticalSpacer">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
            </item>
           </layout>
          </widget>
