--- a/jet/src/libjet/touch.qss
+++ b/jet/src/libjet/touch.qss
@@ -1,6 +1,6 @@
 QPushButton
 {
-	background-color: rgba(230, 230, 230, 50%);
+	background-color: rgba(224, 224, 224, 50%);
 	min-height: 50px;
 	min-width: 50px;
 	border: 2px solid rgb(128, 128, 128);
@@ -8,6 +8,12 @@ QPushButton
 	border-width: 3px;
 	border-radius: 10px;
 	margin-bottom: 1px;
+}
+
+QPushButton:pressed
+{
+	background-color: rgba(192, 192, 192, 100%);
+	border-style: inset;
 }
 
 QPushButton#exit_pb
