--- a/jet/src/jet.ui
+++ b/jet/src/jet.ui
@@ -268,7 +268,7 @@ Mode</string>
     <item row="4" column="0" colspan="6">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="gcode_tab">
        <attribute name="title">
@@ -496,16 +496,75 @@ Mode</string>
            </size>
           </property>
           <property name="title">
-           <string>Tool Touch Off</string>
+           <string>Tool Touc h Off</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
           <layout class="QGridLayout" name="gridLayout_14">
+           <item row="0" column="1">
+            <widget class="QPushButton" name="tool_touchoff_x">
+             <property name="text">
+              <string>Touch Off X</string>
+             </property>
+            </widget>
+           </item>
            <item row="4" column="0">
             <widget class="QLabel" name="Tool_no">
              <property name="text">
               <string>Tool:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QPushButton" name="tool_change_pb">
+             <property name="toolTip">
+              <string/>
+             </property>
+             <property name="toolTipDuration">
+              <number>-1</number>
+             </property>
+             <property name="text">
+              <string>Toolchange</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QDoubleSpinBox" name="tool_touchoff_dsb">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-1000.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>1000.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.001000000000000</double>
+             </property>
+             <property name="stepType">
+              <enum>QAbstractSpinBox::DefaultStepType</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
+            <widget class="QPushButton" name="numberpad_pb_2">
+             <property name="text">
+              <string>Number Pad</string>
+             </property>
+             <property name="target" stdset="0">
+              <string>tool_touchoff_dsb</string>
+             </property>
+             <property name="type" stdset="0">
+              <string>float</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="tool_touchoff_y">
+             <property name="text">
+              <string>Touch Off Y</string>
              </property>
             </widget>
            </item>
@@ -540,69 +599,10 @@ Mode</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="0" colspan="2">
-            <widget class="QPushButton" name="tool_touchoff_x">
-             <property name="text">
-              <string>Touch Off X</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" colspan="2">
-            <widget class="QPushButton" name="tool_touchoff_y">
-             <property name="text">
-              <string>Touch Off Y</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0" colspan="2">
+           <item row="2" column="1">
             <widget class="QPushButton" name="tool_touchoff_z">
              <property name="text">
               <string>Touch Off Z</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0" colspan="2">
-            <widget class="QPushButton" name="tool_change_pb">
-             <property name="toolTip">
-              <string/>
-             </property>
-             <property name="toolTipDuration">
-              <number>-1</number>
-             </property>
-             <property name="text">
-              <string>Toolchange</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0" colspan="2">
-            <widget class="QDoubleSpinBox" name="tool_touchoff_dsb">
-             <property name="decimals">
-              <number>3</number>
-             </property>
-             <property name="minimum">
-              <double>-1000.000000000000000</double>
-             </property>
-             <property name="maximum">
-              <double>1000.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.001000000000000</double>
-             </property>
-             <property name="stepType">
-              <enum>QAbstractSpinBox::DefaultStepType</enum>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0" colspan="2">
-            <widget class="QPushButton" name="numberpad_pb_2">
-             <property name="text">
-              <string>Number Pad</string>
-             </property>
-             <property name="target" stdset="0">
-              <string>tool_touchoff_dsb</string>
-             </property>
-             <property name="type" stdset="0">
-              <string>float</string>
              </property>
             </widget>
            </item>
@@ -1093,6 +1093,9 @@ Mode</string>
    </property>
   </action>
   <action name="actionReload">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Reload</string>
    </property>
